Revised extrinsic hand eye calibration example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Hand-eye calibration example
 add_executable(${PROJECT_NAME}_extrinsic_hand_eye extrinsic_hand_eye.cpp)
-target_link_libraries(${PROJECT_NAME}_extrinsic_hand_eye PRIVATE ${PROJECT_NAME} opencv_highgui stdc++fs)
+target_link_libraries(${PROJECT_NAME}_extrinsic_hand_eye PRIVATE ${PROJECT_NAME} opencv_highgui stdc++fs boost_plugin_loader::boost_plugin_loader)
 target_compile_definitions(${PROJECT_NAME}_extrinsic_hand_eye
                            PRIVATE EXAMPLE_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/data")
 target_cxx_version(${PROJECT_NAME}_extrinsic_hand_eye PUBLIC VERSION 17)
